--- a/.config/polybar/manas/config.ini
+++ b/.config/polybar/manas/config.ini
@@ -7,7 +7,7 @@ include-file = ~/.config/polybar/manas/modules.ini
 ;wm-restack = bspwm
 override-redirect = true
 wm-restack = i3
-bottom = true
+bottom = false
 fixed-center = true
 width = 400
 offset-y = 5
@@ -27,8 +27,8 @@ font-0 = "feather:size=11;3"
 [bar/left]
 inherit = bar/main
 offset-x = 1%
-width = 24%
-modules-left = cpu memory network
+width = 33%
+modules-left = cpu memory network ping-default-gateway filesystem
 
 [bar/mid]
 inherit = bar/main
@@ -38,8 +38,8 @@ modules-center = workspaces
 
 [bar/my_right]
 inherit = bar/main
-offset-x = 83%
-width = 16%
+offset-x = 82%
+width = 17%
 modules-right = alsa battery date
 
 [bar/monitor_mid]
@@ -48,8 +48,8 @@ monitor = HDMI-1-0
 
 [bar/monitor_right]
 inherit = bar/main
-offset-x = 83%
-width = 16%
+offset-x = 82%
+width = 17%
 modules-right = alsa battery date
 monitor = HDMI-1-0
 
