--- a/.config/polybar/manas/modules.ini
+++ b/.config/polybar/manas/modules.ini
@@ -16,6 +16,40 @@ ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
 
+[module/filesystem]
+type = internal/fs
+
+; Mountpoints to display
+mount-0 = /
+
+; Seconds to sleep between updates
+; Default: 30
+interval = 10
+
+; Display fixed precision values
+; Default: false
+fixed-values = true
+
+; Spacing (number of spaces, pixels, points) between entries
+; Default: 2
+spacing = 4
+
+; Default: 90
+; New in version 3.6.0
+warn-percentage = 75
+
+label-mounted =  %percentage_free%% - %free%/%total% 
+label-mounted-padding = 2
+; format-mounted = <bar-used> <label-mounted>
+
+; bar-used-width = 10
+; 
+; bar-used-fill = ▐
+; 
+; bar-used-empty = ▐
+; bar-used-indicator =
+
+
 [module/backlight]
 type = internal/xbacklight
 card = intel_backlight
@@ -72,7 +106,7 @@ format-padding = 2
 type = internal/memory
 format = <label>
 format-prefix =  
-label = " %mb_used%"
+label = " %gb_used%"
 format-background = ${color.primary}
 format-padding = 2
 
@@ -83,7 +117,7 @@ format-connected = <label-connected>
 format-connected-prefix = 
 format-disconnected = <label-disconnected>
 format-disconnected-prefix = 
-label-connected = "%{A1:networkmanager_dmenu &:} %essid%%{A}  %downspeed%%{A}"
+label-connected = "%{A1:networkmanager_dmenu &:} %essid:0:10%%{A}  %downspeed%%{A}"
 label-disconnected = "%{A1:networkmanager_dmenu &:}"
 format-connected-background = ${color.primary}
 format-disconnected-background = ${color.primary}
@@ -182,3 +216,12 @@ reverse-scroll = true
 ; Default: false
 fuzzy-match = true
 
+[module/ping-default-gateway]
+type = custom/script
+
+; Available tokens:
+;   %counter%
+; Command to be executed (using "/bin/sh -c [command]")
+exec = /home/karim/.local/bin/ping_default_route.sh
+interval = 5
+label =  %output%
