--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -70,7 +70,7 @@ set vcs_backend_svn disabled
 set vcs_msg_length 50
 
 # Use one of the supported image preview protocols
-set preview_images false
+set preview_images true
 
 # Set the preview image method. Supported methods:
 #
@@ -768,3 +768,8 @@ map dC chain mark_files all=True toggle=True; get_cumulative_size; mark_files al
 map <c-h> chain move left=1; mark_files all=True toggle=True; get_cumulative_size; mark_files all=True toggle=True; eval fm.execute_console('setlocal path='+str(fm.thisdir)+str(" sort size"))
 map <c-l> chain move right=1; mark_files all=True toggle=True; get_cumulative_size; mark_files all=True toggle=True; eval fm.execute_console('setlocal path='+str(fm.thisdir)+str(" sort size"))
 
+map cj console j%space
+map f console fzf_filter%space
+map X filter 
+
+set colorscheme dracula
